--- a/style.css
+++ b/style.css
@@ -65,3 +65,15 @@ body{
 hr{
 	border:10px solid silver;
 }
+.thick-border{
+	border:3px solid black;
+	border-radius:50%;
+}
+.teams{
+	width: 200px;
+	height:auto;
+}
+
+.large-padding-bottom{
+	padding: 20px 0px 100px 0px;
+}
