--- a/style.css
+++ b/style.css
@@ -34,43 +34,19 @@ body {
 	padding: 20px;
 
 }
-#card-1{
-
-	border: 2px solid black;
-	border-radius: 10px;
+.mk-card{
+	border:5px solid white;
+	border-radius: 5px;
 }
-#card-2{
-	border: 2px solid black;
-	border-radius: 10px;
+.mk-card-img{
+	width: 250px;
+	height: 200px;
 }
-#card-3{
-	border: 2px solid black;
-	border-radius: 10px;
+.mk-card-body{
+	height:250px;
 }
-#card-4{
-	
-	border: 2px solid black;
-	border-radius: 10px;
-}
-#card-5{
-	
-	border: 2px solid black;
-	border-radius: 10px;
-}
-#card-6{
-	
-	border: 2px solid black;
-	border-radius: 10px;
-}
-#card-7{
-	
-	border: 2px solid black;
-	border-radius: 10px;
-}
-#card-8{
-	
-	border: 2px solid black;
-	border-radius: 10px;
+.mk-card-pfont-size{
+	font-size:12px;
 }
 hr{
 	border:10px solid silver;
@@ -103,4 +79,11 @@ hr{
 
 .team-text{
 	font-size: 3vw;
+}
+
+.main-gradient{
+	background: #c31432;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right,#c31432,#240b36);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #c31432,#240b36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
